<resources>
    <string name="app_name">My Movie App</string>
    <string name="title">Movie Title</string>
    <string name="tvshow_title">Tv Show Title</string>
    <string name="empty">Empty</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="title_activity_bottom_layout">Main Bottom Activity</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">Tv Show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Image</string>
</resources>