<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_lv_img_movie"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_lv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/iv_lv_img_movie"
        android:text="@string/empty"
        android:maxLines="1"
        android:layout_toEndOf="@id/iv_lv_img_movie"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_lv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_lv_img_movie"
        android:layout_toEndOf="@id/iv_lv_img_movie"
        android:layout_below="@id/tv_lv_movie_title"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:maxLines="3"
        android:text="@string/empty"/>

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_lv_img_movie"
        android:layout_toEndOf="@id/iv_lv_img_movie"
        android:layout_below="@id/tv_lv_description"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/release_date"/>

    <TextView
        android:id="@+id/tv_lv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_lv_img_movie"
        android:layout_toEndOf="@id/iv_lv_img_movie"
        android:layout_below="@id/release_date"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/empty"/>

</RelativeLayout>